# LocalDB-MCP

./: .gitattributes  .gitignore  .gitmodules  .vscodeignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  server.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
claude-plugin/: .mcp.json  README.md
claude-plugin/.claude-plugin/: plugin.json
docs/: ARCHITECTURE.md  MCP_SPEC.md  PLANNING.md  SECURITY.md
mcpb/: manifest.json
scripts/: prepare-release.ps1
src/: main.rs
src/config/: mod.rs
src/discovery/: mod.rs
src/localdb/: mod.rs
src/mcp/: mod.rs
src/security/: mod.rs
src/sql/: mod.rs
